objects/BU_Growth_Strategy__c.object
<CustomObject>
    <fields>
        <fullName>BG_Name__c</fullName>
        <label>BG Name</label>
        <picklist>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_Growth_Strategy_Type__c</fullName>
        <label>BU Growth Strategy Type</label>
        <picklist>
            <controllingField>BU_Name__c</controllingField>
            <picklistValues>
                <fullName>Application Life Cycle Mgmt (ALM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attack Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Data analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bladesystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Service Management (BSM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Automation (C&amp;A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CloudSystem Matrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Cloud Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Storage  (3Par, StoreOnce, StoreAll, Store Virtual, StoreEasy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Systems &amp; Services (CloudSystem, VirtualSystem, AppSystem)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer for Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Signage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Established Storage Products (XP, EVA, MSA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FlexBranch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FlexCampus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FlexFabric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FlexManagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Zones (SAN Array, NAS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Perf. Computing</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_Name__c</fullName>
        <label>BU Name</label>
        <picklist>
            <controllingField>BG_Name__c</controllingField>
            <picklistValues>
                <fullName>Applications and Business Solutions (ABS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy/IM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Security Products (ESP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphics Solution Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology Outsourcing (ITO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Management (ITM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services (MPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertica</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_Plan__c</fullName>
        <label>BU Plan</label>
        <referenceTo>Business_Unit_Plan__c</referenceTo>
        <relationshipLabel>BU Growth Strategies</relationshipLabel>
        <relationshipName>BU_Growth_Strategies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Challenge__c</fullName>
        <label>Business Challenge</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_IT_Priority_addressed__c</fullName>
        <label>Customer IT Priority addressed</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Activities__c</fullName>
        <label>Execution Activities</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_does_HP_Differentiate__c</fullName>
        <label>How does HP Differentiate?</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_will_the_Competitor_React__c</fullName>
        <label>How will the Competitor React?</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Influencer_Strategy__c</fullName>
        <label>Partner/Influencer Strategy</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Required_Process_Change__c</fullName>
        <label>Required Process Change</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revenue_Potential__c</fullName>
        <label>Sales Potential/TCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solution_Components__c</fullName>
        <inlineHelpText>Required hardware, software, and/or services required for the BU Growth Strategy to be successful</inlineHelpText>
        <label>Solution Components</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <label>Timing</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 3 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_is_the_BU_Solution__c</fullName>
        <label>What is the BU Solution?</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <label>BU Growth Strategy</label>
    <nameField>
        <label>BU Growth Strategy</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BU Growth Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>